[gd_scene load_steps=29 format=3 uid="uid://s8hdmbf8i7q1"]

[ext_resource type="Script" path="res://scenes/ui/ui.gd" id="1_4hv53"]
[ext_resource type="Script" path="res://scenes/ui/FPSMeter.gd" id="1_25er0"]
[ext_resource type="Texture2D" uid="uid://wgtjwi5k73w0" path="res://assets/textures/ui/cursor.png" id="2_tqxfh"]
[ext_resource type="Texture2D" uid="uid://doaf1v2cgoyn8" path="res://assets/textures/ui/mouth_cursor.png" id="3_5k6gp"]
[ext_resource type="Texture2D" uid="uid://blsmofk7uabnt" path="res://assets/textures/items/seals/ui/seal_ostrich_ui.png" id="6_d7173"]
[ext_resource type="Texture2D" uid="uid://cp2n82yv6vs4g" path="res://assets/textures/items/seals/ui/seal_cover.png" id="7_7rcrt"]
[ext_resource type="FontFile" uid="uid://lgjwvohyehre" path="res://assets/fonts/cune.ttf" id="7_mlbvj"]
[ext_resource type="Texture2D" uid="uid://dl483yo4ymptc" path="res://assets/textures/ui/icon_urn.png" id="8_e87r2"]
[ext_resource type="Texture2D" uid="uid://cieppjq7l7oqm" path="res://assets/textures/items/seals/ui/seal_stabby_ui.png" id="8_hhx75"]
[ext_resource type="Texture2D" uid="uid://ing5wfy1pk6b" path="res://assets/textures/ui/icon_bread.png" id="9_2w6qt"]
[ext_resource type="Texture2D" uid="uid://psn2puuymxqj" path="res://assets/textures/items/seals/ui/seal_goatmen_ui.png" id="9_yvkf2"]
[ext_resource type="Texture2D" uid="uid://dyot7t63m1p0g" path="res://assets/textures/items/seals/ui/seal_worship_ui.png" id="10_dvf2h"]
[ext_resource type="Texture2D" uid="uid://8lfjjkdyd25" path="res://assets/textures/items/seals/ui/seal_sitman_ui.png" id="11_68h0q"]
[ext_resource type="Texture2D" uid="uid://bqmpwbg30j8ln" path="res://assets/textures/items/seals/ui/seal_dragons_ui.png" id="12_d04gq"]
[ext_resource type="Texture2D" uid="uid://druiku5pxdfod" path="res://assets/textures/items/seals/ui/seal_beer_ui.png" id="13_go82i"]
[ext_resource type="Texture2D" uid="uid://42wpvrfxrfar" path="res://assets/textures/items/seals/ui/seal_goats_ui.png" id="14_wsc0u"]
[ext_resource type="Texture2D" uid="uid://b81g24kpayxl0" path="res://assets/textures/items/seals/ui/seal_rollercoaster_ui.png" id="15_7fg18"]
[ext_resource type="PackedScene" uid="uid://c7wxxd4eobnjt" path="res://scenes/world.tscn" id="18_2h6oo"]
[ext_resource type="Script" path="res://scenes/ui/viewport.gd" id="19_evdjp"]

[sub_resource type="Animation" id="Animation_uqmu3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.0627451, 0, 0.105882, 1)]
}

[sub_resource type="Animation" id="Animation_etxgf"]
resource_name = "fadeout"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0.0627451, 0, 0.105882, 1), Color(0.0627451, 0, 0.105882, 1), Color(0.0627451, 0, 0.105882, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2ujge"]
_data = {
"RESET": SubResource("Animation_uqmu3"),
"fadeout": SubResource("Animation_etxgf")
}

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nb4vy"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yevu3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cepos"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8xko7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_g6dof"]

[sub_resource type="Theme" id="Theme_18vrf"]
default_font = ExtResource("7_mlbvj")
default_font_size = 48

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4hv53")

[node name="UICanvas" type="CanvasLayer" parent="."]

[node name="FadeOut" type="ColorRect" parent="UICanvas"]
visible = false
z_index = 1000
custom_minimum_size = Vector2(1920, 1080)
offset_right = 40.0
offset_bottom = 40.0
color = Color(0.0627451, 0, 0.105882, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="UICanvas/FadeOut"]
autoplay = "fadeout"
libraries = {
"": SubResource("AnimationLibrary_2ujge")
}

[node name="HandCursor" type="TextureRect" parent="UICanvas"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -12.0
offset_top = -20.0
offset_right = 12.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_tqxfh")

[node name="MouthCursor" type="TextureRect" parent="UICanvas"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -22.0
offset_top = -15.0
offset_right = 22.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_5k6gp")

[node name="FPSMeter" type="Label" parent="UICanvas"]
visible = false
offset_right = 40.0
offset_bottom = 23.0
script = ExtResource("1_25er0")

[node name="PauseBG" type="ColorRect" parent="UICanvas"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.694118, 0.694118, 0.694118, 0.352941)

[node name="Title" type="Label" parent="UICanvas/PauseBG"]
layout_mode = 0
offset_left = 33.0
offset_top = -29.0
offset_right = 495.0
offset_bottom = 95.0
theme_override_fonts/font = ExtResource("7_mlbvj")
theme_override_font_sizes/font_size = 48
text = "Ancient Temple World"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Warps" type="Label" parent="UICanvas/PauseBG"]
layout_mode = 0
offset_left = 32.0
offset_top = 679.0
offset_right = 494.0
offset_bottom = 803.0
theme_override_fonts/font = ExtResource("7_mlbvj")
theme_override_font_sizes/font_size = 48
text = "Click Seals to Warp"
vertical_alignment = 1

[node name="Seals" type="Control" parent="UICanvas/PauseBG"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="OstrichSeal" type="TextureRect" parent="UICanvas/PauseBG/Seals"]
layout_mode = 1
offset_left = 22.0
offset_top = 60.0
offset_right = 304.0
offset_bottom = 260.0
texture = ExtResource("6_d7173")

[node name="Cover" type="TextureRect" parent="UICanvas/PauseBG/Seals/OstrichSeal"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("7_7rcrt")

[node name="WarpButton" type="Button" parent="UICanvas/PauseBG/Seals/OstrichSeal"]
custom_minimum_size = Vector2(200, 80)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -141.0
offset_top = -100.0
offset_right = 141.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_nb4vy")
theme_override_styles/hover = SubResource("StyleBoxEmpty_yevu3")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_cepos")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_8xko7")
theme_override_styles/focus = SubResource("StyleBoxEmpty_g6dof")
flat = true

[node name="StabbySeal" type="TextureRect" parent="UICanvas/PauseBG/Seals"]
layout_mode = 1
offset_left = 22.0
offset_top = 280.0
offset_right = 304.0
offset_bottom = 480.0
tooltip_text = "Stabbing Incident"
texture = ExtResource("8_hhx75")

[node name="Cover" type="TextureRect" parent="UICanvas/PauseBG/Seals/StabbySeal"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 0
texture = ExtResource("7_7rcrt")

[node name="WarpButton" type="Button" parent="UICanvas/PauseBG/Seals/StabbySeal"]
custom_minimum_size = Vector2(200, 80)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -141.0
offset_top = -100.0
offset_right = 141.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_nb4vy")
theme_override_styles/hover = SubResource("StyleBoxEmpty_yevu3")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_cepos")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_8xko7")
theme_override_styles/focus = SubResource("StyleBoxEmpty_g6dof")
flat = true

[node name="GoatmenSeal" type="TextureRect" parent="UICanvas/PauseBG/Seals"]
layout_mode = 1
offset_left = 22.0
offset_top = 500.0
offset_right = 304.0
offset_bottom = 700.0
tooltip_text = "Weird Goatmen"
texture = ExtResource("9_yvkf2")

[node name="Cover" type="TextureRect" parent="UICanvas/PauseBG/Seals/GoatmenSeal"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 0
texture = ExtResource("7_7rcrt")

[node name="WarpButton" type="Button" parent="UICanvas/PauseBG/Seals/GoatmenSeal"]
custom_minimum_size = Vector2(200, 80)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -141.0
offset_top = -100.0
offset_right = 141.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_nb4vy")
theme_override_styles/hover = SubResource("StyleBoxEmpty_yevu3")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_cepos")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_8xko7")
theme_override_styles/focus = SubResource("StyleBoxEmpty_g6dof")
flat = true

[node name="WorshipSeal" type="TextureRect" parent="UICanvas/PauseBG/Seals"]
layout_mode = 1
offset_left = 322.0
offset_top = 60.0
offset_right = 604.0
offset_bottom = 260.0
tooltip_text = "Worship Outside"
texture = ExtResource("10_dvf2h")

[node name="Cover" type="TextureRect" parent="UICanvas/PauseBG/Seals/WorshipSeal"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 0
texture = ExtResource("7_7rcrt")

[node name="WarpButton" type="Button" parent="UICanvas/PauseBG/Seals/WorshipSeal"]
custom_minimum_size = Vector2(200, 80)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -141.0
offset_top = -100.0
offset_right = 141.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_nb4vy")
theme_override_styles/hover = SubResource("StyleBoxEmpty_yevu3")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_cepos")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_8xko7")
theme_override_styles/focus = SubResource("StyleBoxEmpty_g6dof")
flat = true

[node name="SitmanSeal" type="TextureRect" parent="UICanvas/PauseBG/Seals"]
layout_mode = 1
offset_left = 322.0
offset_top = 280.0
offset_right = 604.0
offset_bottom = 480.0
tooltip_text = "Sitman"
texture = ExtResource("11_68h0q")

[node name="Cover" type="TextureRect" parent="UICanvas/PauseBG/Seals/SitmanSeal"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("7_7rcrt")

[node name="WarpButton" type="Button" parent="UICanvas/PauseBG/Seals/SitmanSeal"]
custom_minimum_size = Vector2(200, 80)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -141.0
offset_top = -100.0
offset_right = 141.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_nb4vy")
theme_override_styles/hover = SubResource("StyleBoxEmpty_yevu3")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_cepos")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_8xko7")
theme_override_styles/focus = SubResource("StyleBoxEmpty_g6dof")
flat = true

[node name="DragonSeal" type="TextureRect" parent="UICanvas/PauseBG/Seals"]
layout_mode = 1
offset_left = 322.0
offset_top = 500.0
offset_right = 604.0
offset_bottom = 700.0
texture = ExtResource("12_d04gq")

[node name="Cover" type="TextureRect" parent="UICanvas/PauseBG/Seals/DragonSeal"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 0
texture = ExtResource("7_7rcrt")

[node name="WarpButton" type="Button" parent="UICanvas/PauseBG/Seals/DragonSeal"]
custom_minimum_size = Vector2(200, 80)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -141.0
offset_top = -100.0
offset_right = 141.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_nb4vy")
theme_override_styles/hover = SubResource("StyleBoxEmpty_yevu3")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_cepos")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_8xko7")
theme_override_styles/focus = SubResource("StyleBoxEmpty_g6dof")
flat = true

[node name="BeerSeal" type="TextureRect" parent="UICanvas/PauseBG/Seals"]
layout_mode = 1
offset_left = 622.0
offset_top = 60.0
offset_right = 904.0
offset_bottom = 260.0
tooltip_text = "Beer Party"
texture = ExtResource("13_go82i")

[node name="Cover" type="TextureRect" parent="UICanvas/PauseBG/Seals/BeerSeal"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 0
texture = ExtResource("7_7rcrt")

[node name="WarpButton" type="Button" parent="UICanvas/PauseBG/Seals/BeerSeal"]
custom_minimum_size = Vector2(200, 80)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -141.0
offset_top = -100.0
offset_right = 141.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_nb4vy")
theme_override_styles/hover = SubResource("StyleBoxEmpty_yevu3")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_cepos")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_8xko7")
theme_override_styles/focus = SubResource("StyleBoxEmpty_g6dof")
flat = true

[node name="GoatsSeal" type="TextureRect" parent="UICanvas/PauseBG/Seals"]
layout_mode = 1
offset_left = 622.0
offset_top = 280.0
offset_right = 904.0
offset_bottom = 480.0
tooltip_text = "Goats Jumping"
texture = ExtResource("14_wsc0u")

[node name="Cover" type="TextureRect" parent="UICanvas/PauseBG/Seals/GoatsSeal"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 0
texture = ExtResource("7_7rcrt")

[node name="WarpButton" type="Button" parent="UICanvas/PauseBG/Seals/GoatsSeal"]
custom_minimum_size = Vector2(200, 80)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -141.0
offset_top = -100.0
offset_right = 141.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_nb4vy")
theme_override_styles/hover = SubResource("StyleBoxEmpty_yevu3")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_cepos")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_8xko7")
theme_override_styles/focus = SubResource("StyleBoxEmpty_g6dof")
flat = true

[node name="RollerCoasterSeal" type="TextureRect" parent="UICanvas/PauseBG/Seals"]
layout_mode = 1
offset_left = 622.0
offset_top = 500.0
offset_right = 904.0
offset_bottom = 700.0
tooltip_text = "Roller Coaster Bird"
texture = ExtResource("15_7fg18")

[node name="Cover" type="TextureRect" parent="UICanvas/PauseBG/Seals/RollerCoasterSeal"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 0
texture = ExtResource("7_7rcrt")

[node name="WarpButton" type="Button" parent="UICanvas/PauseBG/Seals/RollerCoasterSeal"]
custom_minimum_size = Vector2(200, 80)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -141.0
offset_top = -100.0
offset_right = 141.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_nb4vy")
theme_override_styles/hover = SubResource("StyleBoxEmpty_yevu3")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_cepos")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_8xko7")
theme_override_styles/focus = SubResource("StyleBoxEmpty_g6dof")
flat = true

[node name="Icons" type="Control" parent="UICanvas/PauseBG"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0

[node name="UrnIcon" type="TextureRect" parent="UICanvas/PauseBG/Icons"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -109.0
offset_top = 20.0
offset_right = -37.0
offset_bottom = 124.0
grow_horizontal = 0
tooltip_text = "Ancient Cloudy Beer (Increases Jump Height)"
texture = ExtResource("8_e87r2")

[node name="UrnScore" type="Label" parent="UICanvas/PauseBG/Icons/UrnIcon"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 0
offset_left = -435.0
offset_top = 3.0
offset_right = -35.0
offset_bottom = 127.0
theme_override_fonts/font = ExtResource("7_mlbvj")
theme_override_font_sizes/font_size = 118
text = "0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="BreadIcon" type="TextureRect" parent="UICanvas/PauseBG/Icons"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -124.0
offset_top = 147.0
offset_right = -20.0
offset_bottom = 223.0
grow_horizontal = 0
tooltip_text = "Ancient Carbonized Bread (Increases Run Speed)"
texture = ExtResource("9_2w6qt")

[node name="BreadScore" type="Label" parent="UICanvas/PauseBG/Icons/BreadIcon"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 0
offset_left = -420.0
offset_top = -15.0
offset_right = -20.0
offset_bottom = 109.0
theme_override_fonts/font = ExtResource("7_mlbvj")
theme_override_font_sizes/font_size = 118
text = "0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="FSButton" type="Button" parent="UICanvas/PauseBG"]
custom_minimum_size = Vector2(200, 80)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -200.0
offset_right = 420.0
offset_bottom = -120.0
grow_vertical = 0
theme = SubResource("Theme_18vrf")
text = "Toggle Fullscreen"

[node name="ResButton" type="Button" parent="UICanvas/PauseBG"]
custom_minimum_size = Vector2(200, 80)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -100.0
offset_right = 420.0
offset_bottom = -20.0
grow_vertical = 0
theme = SubResource("Theme_18vrf")
text = "3D Scaling: 1x"

[node name="WarpButton" type="Button" parent="UICanvas/PauseBG"]
custom_minimum_size = Vector2(200, 80)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 440.0
offset_top = -100.0
offset_right = 840.0
offset_bottom = -20.0
grow_vertical = 0
theme = SubResource("Theme_18vrf")
text = "Warp to Start"

[node name="QuitButton" type="Button" parent="UICanvas/PauseBG"]
custom_minimum_size = Vector2(200, 80)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -220.0
offset_top = -100.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0
theme = SubResource("Theme_18vrf")
text = "Quit"

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
stretch = true
script = ExtResource("19_evdjp")

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
handle_input_locally = false
msaa_3d = 1
size = Vector2i(1920, 1080)
render_target_update_mode = 4

[node name="World" parent="SubViewportContainer/SubViewport" instance=ExtResource("18_2h6oo")]

[connection signal="pressed" from="UICanvas/PauseBG/Seals/OstrichSeal/WarpButton" to="." method="_on_ostrich_warp_button_pressed"]
[connection signal="pressed" from="UICanvas/PauseBG/Seals/StabbySeal/WarpButton" to="." method="_on_stabby_warp_button_pressed"]
[connection signal="pressed" from="UICanvas/PauseBG/Seals/GoatmenSeal/WarpButton" to="." method="_on_goatmen_warp_button_pressed"]
[connection signal="pressed" from="UICanvas/PauseBG/Seals/WorshipSeal/WarpButton" to="." method="_on_worship_warp_button_pressed"]
[connection signal="pressed" from="UICanvas/PauseBG/Seals/SitmanSeal/WarpButton" to="." method="_on_sitman_warp_button_pressed"]
[connection signal="pressed" from="UICanvas/PauseBG/Seals/DragonSeal/WarpButton" to="." method="_on_dragon_warp_button_pressed"]
[connection signal="pressed" from="UICanvas/PauseBG/Seals/BeerSeal/WarpButton" to="." method="_on_beer_warp_button_pressed"]
[connection signal="pressed" from="UICanvas/PauseBG/Seals/GoatsSeal/WarpButton" to="." method="_on_goats_warp_button_pressed"]
[connection signal="pressed" from="UICanvas/PauseBG/Seals/RollerCoasterSeal/WarpButton" to="." method="_on_rollercoaster_warp_button_pressed"]
[connection signal="pressed" from="UICanvas/PauseBG/FSButton" to="." method="_on_fs_button_pressed"]
[connection signal="pressed" from="UICanvas/PauseBG/ResButton" to="." method="_on_res_button_pressed"]
[connection signal="pressed" from="UICanvas/PauseBG/WarpButton" to="." method="_on_warp_button_pressed"]
[connection signal="pressed" from="UICanvas/PauseBG/QuitButton" to="." method="_on_quit_button_pressed"]
